Updated spacing issue with cards

--- a/wonder-recipe/static/css/styles.css
+++ b/wonder-recipe/static/css/styles.css
@@ -183,6 +183,8 @@ a:hover {
   padding-left: calc(8.8rem - 15px);
   padding-right: calc(8.8rem - 15px);
   margin-bottom: 4.8rem; }
+  .food-cards__recipe-container {
+    margin-bottom: 2.4rem; }
   .food-cards__img {
     border-radius: 2px; }
   .food-cards__food-name {
