--- a/wonder-recipe/static/sass/_wonder-recipe.scss
+++ b/wonder-recipe/static/sass/_wonder-recipe.scss
@@ -205,6 +205,10 @@
     padding-right: calc(8.8rem - 15px);
     margin-bottom: 4.8rem;
 
+    &__recipe-container {
+        margin-bottom: 2.4rem;
+    }
+
     &__img {
         border-radius: 2px;
     }
